Fixed the bug when in dark mode the default color of the pen is blackk

--- a/sticky_note/src/css/index.css
+++ b/sticky_note/src/css/index.css
@@ -48,7 +48,7 @@ textarea{
 	transform: scale(1.25);
 }
 .color-button{
-	background-color:rgb(0,0,0);
+	background-color:var(--font-color);
 	position:absolute;
 	width: 10%; 
 	margin-top:10%; 
